--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE HTML>
 <!--
-	Optics by Pixelarity
+	Formula by Pixelarity
 	pixelarity.com | hello@pixelarity.com
 	License: pixelarity.com/license
 -->
@@ -11,197 +11,180 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
+		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
 	</head>
-	<body class="landing">
-		<div id="page-wrapper">
+	<body>
 
-			<!-- Header -->
-				<header id="header" class="alt">
-					<h1><a href="index.html">Optics <span>by Pixelarity</span></a></h1>
-					<a href="#nav"><span>Menu</span></a>
-				</header>
+		<!-- Page Wrapper -->
+			<div id="page-wrapper">
 
-			<!-- Nav -->
-				<nav id="nav">
-					<ul class="links">
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
-					</ul>
-					<ul class="actions vertical">
-						<li><a href="#" class="button fit special">Sign Up</a></li>
-						<li><a href="#" class="button fit">Log In</a></li>
-					</ul>
-				</nav>
-
-			<!-- Banner -->
-				<section id="banner">
-					<div class="inner">
-						<h2>Fusce commodo erat vitae <br /> aliquam cursus</h2>
-						<ul class="actions">
-							<li><a href="#one" class="button scrolly">Learn More</a></li>
-						</ul>
-					</div>
-				</section>
-
-			<!-- One -->
-				<section id="one" class="wrapper special">
-					<div class="inner">
-						<ul class="icons major">
-							<li><span class="icon alt fa-apple">
-								<span class="label">Apple</span>
-							</span></li>
-							<li class="special"><span class="icon alt fa-cloud">
-								<span class="label">Cloud</span>
-							</span></li>
-							<li><span class="icon alt fa-camera">
-								<span class="label">Camera</span>
-							</span></li>
-						</ul>
-						<header>
-							<h2>Donec nec justo eget felis</h2>
-							<p>Sed egestas, ante et vulputate volutpat, eros pede semper est, vitae luctus metus libero eu augue. Morbi purus libero, faucibus adipiscing, commodo quis, gravida id, est. Sed lectus. Praesent elementum hendrerit tortor. Sed semper lorem at felis. Vestibulum volutpat, lacus a ultrices sagittis.</p>
-						</header>
-					</div>
-				</section>
-
-		<!-- Two -->
-			<section id="two" class="wrapper style1">
-				<div class="inner">
-					<header class="special major narrow">
-						<small>Aliquam</small>
-						<h2>Consectetuer ligula vulputat</h2>
-						<p>Morbi interdum mollis sapien. Sed ac risus. Phasellus lacinia, magna a ulla mcorper laoreet, lectus arcu pulvinar risus, vitae facilisis</p>
+				<!-- Header -->
+					<header id="header">
+						<a href="index.html" class="logo">Formula <span>by Pixelarity</span></a>
+						<nav>
+							<ul>
+								<li><a href="#menu">Menu</a></li>
+							</ul>
+						</nav>
 					</header>
-					<div class="features">
-						<ul class="left">
-							<li class="icon alt fa-chain-broken">
-								<span class="label">Link</span>
-								Praesent dapibus, neque cursus faucibustor
-							</li>
-							<li class="icon alt fa-gavel">
-								<span class="label">Gavel</span>
-								Integer vitae libero ac risus egestas placerat
-							</li>
-							<li class="icon alt fa-user">
-								<span class="label">User</span>
-								Fusce lobortis lorem at ipsum semper sagittis
-							</li>
-						</ul>
-						<object type="image/svg+xml" data="images/pic01-phone.svg"></object>
-						<!--[if lte IE 8]><span class="image fit"><img src="images/pic01.jpg" alt="" /></span><![endif]-->
-						<ul class="right">
-							<li class="icon alt fa-paper-plane">
-								<span class="label">Plane</span>
-								Iso lin nibhuisque a lectus consectetuer ligula
-							</li>
-							<li class="icon alt fa-rocket">
-								<span class="label">Rocket</span>
-								Namoii un nulla quam gravi da non commodo
-							</li>
-							<li class="icon alt fa-cog">
-								<span class="label">Cog</span>
-								Aene aman dignissim loe pellentesque felis
-							</li>
-						</ul>
-					</div>
-				</div>
-			</section>
 
-		<!-- Three -->
-			<section id="three" class="wrapper">
-				<div class="inner spotlight left">
-					<span class="image fit"><img src="images/pic02.jpg" alt="" /></span>
-					<article>
-						<header>
-							<small>Dignissim</small>
-							<h2>Cras ornare</h2>
-						</header>
-						<p>Praesent dapibus, neque id cursus fauc ibus, tortor neque egestas augue, eu vu lputate magna eros eu erat. Aliquam erat volutpat. Nam dui mi, tincidunt quis uno accumsan porttitor, facilisis luctus lorem ipsum dolor sit amet vivamus lorem ipsum dolor.</p>
-						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+				<!-- Menu -->
+					<nav id="menu">
+						<ul class="links">
+							<li><a href="index.html">Home</a></li>
+							<li><a href="generic.html">Generic</a></li>
+							<li><a href="elements.html">Elements</a></li>
 						</ul>
-					</article>
-				</div>
-			</section>
+						<ul class="actions vertical">
+							<li><a href="#" class="button special fit">Sign Up</a></li>
+							<li><a href="#" class="button fit">Log In</a></li>
+						</ul>
+					</nav>
 
-		<!-- Four -->
-			<section id="four" class="wrapper style3">
-				<div class="inner spotlight right">
-					<object type="image/svg+xml" data="images/pic03-desktop.svg"></object>
-					<!--[if lte IE 8]><span class="image fit"><img src="images/pic03.jpg" alt="" /></span><![endif]-->
-					<article>
-						<header>
-							<small>Malesuada</small>
-							<h2>Augue feugiat</h2>
-						</header>
-						<ul class="checklist">
-							<li>Nunc dignissim risus id metus</li>
-							<li>Vivamus vestibulum nulla nec ante</li>
-							<li>Fusce pellentesque suscipit nibh</li>
-							<li>Integer vitae libero ac risus egestas</li>
-							<li>Ut aliquam sollicitudin leo</li>
-						</ul>
-						<ul class="actions">
-							<li><a href="#" class="button">Read More</a></li>
-						</ul>
-					</article>
-				</div>
-			</section>
+				<!-- Banner -->
+				<!--
+					Note: If you'd like to use a video as your banner background, set the "data-video" attribute below
+					to the full filename of your video, but *exclude* the file extension. The template will automatically
+					generate a multi-format* <video> tag on platforms that support background videos, and simply skip the
+					step on those that don't (falling back on whatever you've set as the background image).
 
-		<!-- Five -->
-			<section id="five" class="wrapper special">
-				<div class="inner">
-					<header>
-						<small>Adipiscing</small>
-						<h2>Etiam feugiat ligula</h2>
-					</header>
-					<ul class="labeled-icons">
-						<li>
-							<span class="icon fa-mobile-phone">800-555-0000</span>
-						</li>
-						<li>
-							<span class="icon fa-envelope-o">hello@untitled.tld</span>
-						</li>
-						<li>
-							<span class="icon fa-map-marker">Nashville, TN</span>
-						</li>
-					</ul>
-					<form action="#" class="alt" method="POST">
-						<div class="row uniform 50%">
-							<div class="6u 12u$(xsmall)">
-								<input name="name" placeholder="Name" type="text" />
-							</div>
-							<div class="6u$ 12u$(xsmall)">
-								<input name="email" placeholder="Email" type="email" />
-							</div>
-							<div class="12u$">
-								<textarea name="message" placeholder="Message" rows="6"></textarea>
-							</div>
+					* Your video must be offered in both .mp4 and .webm formats to work everywhere.
+				-->
+					<section id="banner" data-video="images/banner">
+						<div class="inner">
+							<header>
+								<h1>This is Formula</h1>
+								<p>Sed efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo veroeros<br />
+								sed ipsum amet pellentesque venenatis magna hendrerit blandit veroeros.</p>
+							</header>
+							<ul class="actions">
+								<li><a href="#" class="button special big">Get Started</a></li>
+							</ul>
 						</div>
-						<ul class="actions">
-							<li><input type="submit" value="Send message" /></li>
-						</ul>
-					</form>
-				</div>
-			</section>
+						<a href="#one" class="more">Learn More</a>
+					</section>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<div class="copyright">
-						&copy; Untitled. All rights reserved.
+				<!-- Wrapper -->
+					<div id="wrapper">
+
+						<!-- One -->
+							<section id="one" class="main">
+								<div class="inner spotlight style1">
+									<div class="content">
+										<header>
+											<h2>Sed Consequat</h2>
+										</header>
+										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+									</div>
+									<!--
+										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+										320x340 or at least the same aspect ratio (16:17).
+									-->
+									<span class="image"><img src="images/pic01.svg" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two" class="main">
+								<div class="inner spotlight alt style2">
+									<div class="content">
+										<header>
+											<h2>Nisl Adipiscing</h2>
+										</header>
+										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+									</div>
+									<!--
+										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+										320x340 or at least the same aspect ratio (16:17).
+									-->
+									<span class="image"><img src="images/pic02.svg" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- Three -->
+							<section id="three" class="main">
+								<div class="inner spotlight style3">
+									<div class="content">
+										<header>
+											<h2>Varius Tempus</h2>
+										</header>
+										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+									</div>
+									<!--
+										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+										320x340 or at least the same aspect ratio (16:17).
+									-->
+									<span class="image"><img src="images/pic03.svg" alt="" /></span>
+								</div>
+							</section>
+
+						<!-- Four -->
+							<section id="four" class="main special">
+								<div class="inner">
+									<header>
+										<h2>Tempor Suspendisse</h2>
+									</header>
+									<div class="features">
+										<section>
+											<span class="icon major fa-diamond style1"></span>
+											<h3>Magna Veroeros</h3>
+											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+										</section>
+										<section>
+											<span class="icon major fa-laptop style2"></span>
+											<h3>Risus Adipiscing</h3>
+											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+										</section>
+										<section>
+											<span class="icon major fa-bar-chart style3"></span>
+											<h3>Leo Ipsum Varius</h3>
+											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+										</section>
+										<section>
+											<span class="icon major fa-save style4"></span>
+											<h3>Dolor Consequat</h3>
+											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+										</section>
+									</div>
+								</div>
+							</section>
+
+						<!-- CTA -->
+							<section id="cta" class="main special">
+								<div class="inner">
+									<p>Sed varius suspendisse dictum leo ipsum amet pellentesque<br />
+									fusce ac hendrerit consectetur tempor lorem ipsum.</p>
+									<ul class="actions vertical">
+										<li><a href="#" class="button special big">Get Started</a></li>
+										<li><a href="#" class="button big">Learn More</a></li>
+									</ul>
+								</div>
+							</section>
+
 					</div>
-				</footer>
 
-		</div>
+				<!-- Footer -->
+					<footer id="footer">
+						<div class="inner">
+							<ul class="icons">
+								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
+								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+							</ul>
+						</div>
+						<p class="copyright">&copy; Untitled. All rights reserved.</p>
+					</footer>
+
+			</div>
 
 		<!-- Scripts -->
-			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.scrollex.min.js"></script>
 			<script src="assets/js/jquery.scrolly.min.js"></script>
+			<script src="assets/js/jquery.scrollex.min.js"></script>
+			<script src="assets/js/skel.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="assets/js/main.js"></script>
