add project information

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Formula <span>by Pixelarity</span></a>
+						<a href="index.html" class="logo">NOAH <span>KANG</span></a>
 						<nav>
 							<ul>
 								<li><a href="#menu">Menu</a></li>
@@ -54,12 +54,13 @@
 					<section id="banner" data-video="images/banner">
 						<div class="inner">
 							<header>
-								<h1>This is Formula</h1>
-								<p>Sed efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo veroeros<br />
-								sed ipsum amet pellentesque venenatis magna hendrerit blandit veroeros.</p>
+								<h1>Noah Kang</h1>
+								<p>I'm a software engineer and web designer.<br />
+								I want to help you build amazing user experiences.<br />
+								Scroll down to view my projects</p>
 							</header>
 							<ul class="actions">
-								<li><a href="#" class="button special big">Get Started</a></li>
+								<li><a href="http://res.cloudinary.com/noah-s-kang/image/upload/v1503791217/NOAH_KANG_1_xtgrnz.pdf" class="button special big">View Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more">Learn More</a>
@@ -73,15 +74,20 @@
 								<div class="inner spotlight style1">
 									<div class="content">
 										<header>
-											<h2>Sed Consequat</h2>
+											<h2>Impetus</h2>
 										</header>
-										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+										<p>Impetus is a crowdfunding application inspired by Kickstarter.com. Users can create campaigns for projects they are passionate about, raise funds, and financially back other users' projects.<br/><br/>
+										Created with Ruby on Rails and React/Redux.
+									</p>
+									<a href="https://impetus-live.herokuapp.com/#/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+									<a href="https://github.com/noahskang/Impetus">Github</a>
 									</div>
 									<!--
 										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 										320x340 or at least the same aspect ratio (16:17).
 									-->
-									<span class="image"><img src="images/pic01.svg" alt="" /></span>
+									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
+									<!-- <span class="image"></span> -->
 								</div>
 							</section>
 
@@ -90,15 +96,18 @@
 								<div class="inner spotlight alt style2">
 									<div class="content">
 										<header>
-											<h2>Nisl Adipiscing</h2>
+											<h2>Supernacho</h2>
 										</header>
-										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. <br/><br/>
+										Created with HTML5 and vanilla JavaScript.</p>
+										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+										<a href="https://github.com/noahskang/SuperNacho">Github</a>
 									</div>
 									<!--
 										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 										320x340 or at least the same aspect ratio (16:17).
 									-->
-									<span class="image"><img src="images/pic02.svg" alt="" /></span>
+									<img style="padding: 0 50px 0 0;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795774/macbook-pro-black-screen_qfi8gj.jpg" alt="">
 								</div>
 							</section>
 
@@ -107,15 +116,19 @@
 								<div class="inner spotlight style3">
 									<div class="content">
 										<header>
-											<h2>Varius Tempus</h2>
+											<h2>Transitninja</h2>
 										</header>
-										<p>Ipsum efficitur nisi ac turpis venenatis varius. Suspendisse sed dictum leo ipsum amet pellentesque fusce ac hendrerit consectetur tempor risus, sed eget semper nunc. eleifend facilisis nisi vitae lorem ipsum dolor consequat lorem ipsum etiam.</p>
+										<p>Transitninja is an iOS application that allows users to get public transit directions and track bus locations in real-time. It uses the 511.org API to render bus locations on a map. I built this with a team in which I principally served as the Front-End Engineer.<br/><br/>
+										Created with MongoDB, Express, React Native, and NodeJS</p>
+										<a href="https://noahskang.github.io/TransitNinja-Demo/">Demo Page</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+										<a href="https://github.com/noahskang/transitninja-1">Github</a>
 									</div>
 									<!--
 										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 										320x340 or at least the same aspect ratio (16:17).
 									-->
-									<span class="image"><img src="images/pic03.svg" alt="" /></span>
+
+									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_309/v1502714608/busview_e5naet.png" alt="">
 								</div>
 							</section>
 
@@ -123,28 +136,31 @@
 							<section id="four" class="main special">
 								<div class="inner">
 									<header>
-										<h2>Tempor Suspendisse</h2>
+										<h2>Skills and Technologies</h2>
 									</header>
 									<div class="features">
 										<section>
-											<span class="icon major fa-diamond style1"></span>
-											<h3>Magna Veroeros</h3>
-											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+											<span class="icon major fa-television style1"></span>
+											<h3>FRONTEND:
+											<br/><br/>JavaScript (vanilla, jQuery, React/Redux), HTML/CSS/Sass</h3>
+											<p></p>
 										</section>
 										<section>
-											<span class="icon major fa-laptop style2"></span>
-											<h3>Risus Adipiscing</h3>
-											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+											<span class="icon major fa-database style2"></span>
+											<h3>Backend: </br/></br/>
+											Ruby on Rails, Node, Express, MongoDB</h3>
+											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
 										</section>
 										<section>
-											<span class="icon major fa-bar-chart style3"></span>
-											<h3>Leo Ipsum Varius</h3>
-											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+											<span class="icon major fa-mobile style3"></span>
+											<h3>iOS Development: <br/>
+											</br/> REACT NATIVE</h3>
 										</section>
 										<section>
-											<span class="icon major fa-save style4"></span>
-											<h3>Dolor Consequat</h3>
-											<p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p>
+											<span class="icon major fa-pencil style4"></span>
+											<h3>DESIGN: <br /><br/>
+											ADOBE CREATIVE SUITE</h3>
+											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
 										</section>
 									</div>
 								</div>
@@ -153,11 +169,13 @@
 						<!-- CTA -->
 							<section id="cta" class="main special">
 								<div class="inner">
-									<p>Sed varius suspendisse dictum leo ipsum amet pellentesque<br />
-									fusce ac hendrerit consectetur tempor lorem ipsum.</p>
+									<header>
+										<h2>SAY HELLO</h2>
+									</header>
+									<p className="email">Email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
 									<ul class="actions vertical">
-										<li><a href="#" class="button special big">Get Started</a></li>
-										<li><a href="#" class="button big">Learn More</a></li>
+										<!-- <li><a href="#" class="button special big">Get Started</a></li>
+										<li><a href="#" class="button big">Learn More</a></li> -->
 									</ul>
 								</div>
 							</section>
@@ -168,11 +186,10 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon alt fa-youtube"><span class="label">YouTube</span></a></li>
-								<li><a href="#" class="icon alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noah-kang-31546166/" class="icon alt fa-linkedin"><span class="label">Linkedin</span></a></li>
+								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
+								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
