--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
 					<header id="header">
 						<a href="index.html" class="logo">NOAH <span>KANG</span></a>
 						<nav>
-							<ul>
+							<!-- <ul>
 								<li><a href="#menu">Menu</a></li>
-							</ul>
+							</ul> -->
 						</nav>
 					</header>
 
 				<!-- Menu -->
-					<nav id="menu">
+					<!-- <nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="generic.html">Generic</a></li>
@@ -40,7 +40,7 @@
 							<li><a href="#" class="button special fit">Sign Up</a></li>
 							<li><a href="#" class="button fit">Log In</a></li>
 						</ul>
-					</nav>
+					</nav> -->
 
 				<!-- Banner -->
 				<!--
@@ -54,10 +54,9 @@
 					<section id="banner" data-video="images/banner">
 						<div class="inner">
 							<header>
-								<h1>Noah Kang</h1>
-								<p>I'm a software engineer and web designer.<br />
-								I want to help you build amazing user experiences.<br />
-								Scroll down to view my projects</p>
+								<h1>Welcome</h1>
+								<p>My name's Noah. I'm a software engineer and web designer.<br />
+									Browse my projects, or find out more about me below.</p>
 							</header>
 							<ul class="actions">
 								<li><a href="http://res.cloudinary.com/noah-s-kang/image/upload/v1503791217/NOAH_KANG_1_xtgrnz.pdf" class="button special big">View Resume</a></li>
@@ -128,7 +127,7 @@
 										320x340 or at least the same aspect ratio (16:17).
 									-->
 
-									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_309/v1502714608/busview_e5naet.png" alt="">
+									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_280/v1502714608/busview_e5naet.png" alt="">
 								</div>
 							</section>
 
@@ -166,20 +165,36 @@
 								</div>
 							</section>
 
+							<section id="cta" class="main special">
+								<div class="inner">
+									<header>
+										<h2>ABOUT ME</h2>
+									</header>
+									<p>
+									I grew up in the Bay Area, surrounded by the burgeoning technology scene, and started out programming in high school.
+									<br />
+									For the past several years, I've been working towards achieving my professional dream of becoming both a CODER and a DESIGNER. Now, I'm looking for jobs as a front-end engineer.
+									<br />
+									<br />
+									I am also passionate about serving my global community, and take some time each year to volunteer. Recently, I returned from Greece, where I worked as a volunteer at the Moria refugee camp. I hope to work for a company that shares my values and takes social responsibility seriously.
+									<br/>
+									 </br/>If you'd like to find out more about my qualifications, or would just like to chat, check out my resume or send me an email. <br/>
+										 Thanks for checking out my portfolio!
+									</p>
+								</div>
+							</section>
+
+
+
 						<!-- CTA -->
 							<section id="cta" class="main special">
 								<div class="inner">
 									<header>
-										<h2>SAY HELLO</h2>
+										<h2>GET CONNECTED</h2>
 									</header>
-									<p className="email">Email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
-									<ul class="actions vertical">
-										<!-- <li><a href="#" class="button special big">Get Started</a></li>
-										<li><a href="#" class="button big">Learn More</a></li> -->
-									</ul>
+									<p>Email me at: <a href="mailto:noahskang@gmail.com">noahskang@gmail.com.</a></p>
 								</div>
 							</section>
-
 					</div>
 
 				<!-- Footer -->
@@ -190,6 +205,7 @@
 								<li><a href="https://github.com/noahskang" class="icon alt fa-github"><span class="label">Github</span></a></li>
 								<li><a href="https://www.facebook.com/noah.kang.54" class="icon alt fa-facebook"><span class="label">Facebook</span></a></li>
 								<li><a href="mailto:noahskang@gmail.com" class="icon alt fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="https://noahskang.wixsite.com/moria" class="icon alt fa-pencil"><span class="label">Moria</span></a></li>
 							</ul>
 						</div>
 						<p class="copyright">&copy; Untitled. All rights reserved.</p>
