Add project information

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 										<header>
 											<h2>Supernacho</h2>
 										</header>
-										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. <br/><br/>
+										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
 										Created with HTML5 and vanilla JavaScript.</p>
 										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 										<a href="https://github.com/noahskang/SuperNacho">Github</a>
