--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 											<h2>Supernacho</h2>
 										</header>
 										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
-										Created with HTML5 and vanilla JavaScript.</p>
+										Created with HTML5 and vanilla JavaScript (ES6).</p>
 										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
 										<a href="https://github.com/noahskang/SuperNacho">Github</a>
 									</div>
@@ -141,7 +141,7 @@
 										<section>
 											<span class="icon major fa-television style1"></span>
 											<h3>FRONTEND:
-											<br/><br/>JavaScript (vanilla, jQuery, React/Redux), HTML/CSS/Sass</h3>
+											<br/><br/>JavaScript (vanilla, jQuery, React/Redux, ES6), HTML/CSS/Sass</h3>
 											<p></p>
 										</section>
 										<section>
