--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 										<section>
 											<span class="icon major fa-mobile style3"></span>
 											<h3>iOS Development: <br/>
-											</br/> REACT NATIVE</h3>
+											</br/> REACT NATIVE<br /><br />XCODE</h3>
 										</section>
 										<section>
 											<span class="icon major fa-pencil style4"></span>
