Add technical skills

--- a/index.html
+++ b/index.html
@@ -147,18 +147,18 @@
 										<section>
 											<span class="icon major fa-database style2"></span>
 											<h3>Backend: </br/></br/>
-											Ruby on Rails, Node, Express, MongoDB</h3>
+											Python, Java, Ruby on Rails, Node, Express, MongoDB</h3>
 											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
 										</section>
 										<section>
 											<span class="icon major fa-mobile style3"></span>
 											<h3>iOS Development: <br/>
-											</br/> REACT NATIVE<br /><br />XCODE</h3>
+											</br/> REACT NATIVE<br />XCODE</h3>
 										</section>
 										<section>
 											<span class="icon major fa-pencil style4"></span>
 											<h3>DESIGN: <br /><br/>
-											ADOBE CREATIVE SUITE</h3>
+											ADOBE CREATIVE SUITE<br />Balsamiq Mockups</h3>
 											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
 										</section>
 									</div>
