--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
 					* Your video must be offered in both .mp4 and .webm formats to work everywhere.
 				-->
-					<section id="banner" data-video="images/banner">
+					<section id="banner">
 						<div class="inner">
 							<header>
 								<h1>Welcome</h1>
@@ -56,7 +56,7 @@
 									Browse my projects, or find out more about me below.</p>
 							</header>
 							<ul class="actions">
-								<li><a href="http://res.cloudinary.com/noah-s-kang/image/upload/v1504371657/NOAH_KANG_c3esza.pdf" class="button special big">View Resume</a></li>
+								<li><a href="http://res.cloudinary.com/noah-s-kang/image/upload/v1504717607/NOAH_KANG_sgnmdc.pdf" class="button special big">View Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more">Learn More</a>
