--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									Browse my projects, or find out more about me below.</p>
 							</header>
 							<ul class="actions">
-								<li><a href="http://res.cloudinary.com/noah-s-kang/image/upload/v1504824810/Noah_Kang_migesz.pdf" class="button special big">View Resume</a></li>
+								<li><a href="https://res.cloudinary.com/noah-s-kang/image/upload/v1536588011/NOAH_KANG_1_njqtzr.pdf" class="button special big">View Resume</a></li>
 							</ul>
 						</div>
 						<a href="#one" class="more">Learn More</a>
