Add new project root links to the homepage

--- a/index.html
+++ b/index.html
@@ -70,6 +70,47 @@
 								<div class="inner spotlight style1">
 									<div class="content">
 										<header>
+											<h2>NestEgg maintenance redesign</h2>
+										</header>
+										<p>Impetus is a crowdfunding application inspired by Kickstarter.com. Users can create campaigns for projects they are passionate about, raise funds, and financially back other users' projects.<br/><br/>
+										Created with Ruby on Rails and React/Redux.
+									</p>
+									<a href="project1maintenance.html">View roject</a>
+									</div>
+									<!--
+										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+										320x340 or at least the same aspect ratio (16:17).
+									-->
+									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
+									<!-- <span class="image"></span> -->
+								</div>
+							</section>
+
+						<!-- Two -->
+							<section id="two" class="main">
+								<div class="inner spotlight alt style2">
+									<div class="content">
+										<header>
+											<h2>Supernacho</h2>
+										</header>
+										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
+										Created with HTML5 and vanilla JavaScript (ES6).</p>
+										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
+										<a href="https://github.com/noahskang/SuperNacho">Github</a>
+									</div>
+									<!--
+										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
+										320x340 or at least the same aspect ratio (16:17).
+									-->
+									<img style="padding: 0 50px 0 0;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795774/macbook-pro-black-screen_qfi8gj.jpg" alt="">
+								</div>
+							</section>
+
+						<!-- One -->
+							<section id="one" class="main">
+								<div class="inner spotlight style1">
+									<div class="content">
+										<header>
 											<h2>Impetus</h2>
 										</header>
 										<p>Impetus is a crowdfunding application inspired by Kickstarter.com. Users can create campaigns for projects they are passionate about, raise funds, and financially back other users' projects.<br/><br/>
