save css and html updates

--- a/project1maintenance.html
+++ b/project1maintenance.html
@@ -21,7 +21,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Formula <span>by Pixelarity</span></a>
+						<a href="index.html" class="logo">NOAH <span>KANG</span></a>
 						<nav>
 							<ul>
 								<li><a href="#menu">Menu</a></li>
@@ -47,11 +47,63 @@
 
 						<!-- Main -->
 							<section id="main" class="main">
-								<div class="inner">
+								<div class="inner project-inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>Maintenance Flow Redesign</h1>
+										<p class="subtitle">The Problem: Users are not adopting our maintenance feature</h2>
 									</header>
 									<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+									<div class="">
+
+									</div>
+									<h2>
+										Context
+									</h2>
+									<p>
+										NestEgg is a property management app. One key feature is on-demand maintenance. Residents can report maintenance issues, and NestEgg connects landlords with Pros, handles scheduling, and provides live updates to the landlord.
+										<br/><br/>
+										A significant percentage of our users were not using our on-demand maintenance feature, and we wanted to figure out why.
+									</p>
+									<h2>
+										My Role
+									</h2>
+									<p class="_1em-bottom">
+										I worked as the principle UX Researcher and Designer, collaborating with our Product Manager, Chris Le, and the rest of our design team.
+									</p>
+										<div class="roles">
+											<span class="roles-chip">
+												UX Design
+											</span>
+											<span class="roles-chip">
+												User research
+											</span>
+										</div>
+									<h2>
+										Step 1: Investigation
+									</h2>
+									<p class="_1em-bottom">
+										We started with some <strong>initial hypotheses</strong> about why users might not be using our maintenance feature:
+									</p>
+										<ul>
+											<li>
+												<strong>Visibility</strong> - Users may not know that the maintenance feature exists
+											</li>
+											<li>
+												<strong>Education</strong> - Users may not understand what our maintenance product can do for them.
+											</li>
+											<li>
+												<strong>Friction</strong> - Users may find our existing maintenance flow too confusing.
+											</li>
+										</ul>
+										<p class="_1em-bottom">
+											Next, we used <strong>Analyzed tracking data</strong> for some high-level verification of our hypotheses. One key finding is that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages. Now, we were ready for hands-on research
+										</p>
+		<h2>
+			Step 2: User research
+		</h2>
+
+
+
 									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
 									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis.</p>
