--- a/index.html
+++ b/index.html
@@ -49,19 +49,20 @@
 					* Your video must be offered in both .mp4 and .webm formats to work everywhere.
 				-->
 					<section id="banner">
-						<div class="inner">
-							<header>
-								<h1>Welcome</h1>
-								<p>My name's Noah. I'm a software engineer and web designer.<br />
-									Browse my projects, or find out more about me below.</p>
+						<div class="inner" style=>
+							<header style="padding-bottom: none !important">
+							 <h1 class="typewrite" style="text-transform: none !important" data-period="2000" data-type='[ "Hi, I&#39;m Noah.", "I love to design, code, and write.", "I&#39;m glad you&#39;re here!"]'>
+							    <span class="wrap"></span>
+							</h1>
 							</header>
+							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">I'm passionate about building experiences that connect people. With a background in computer science, graphic design, and content-writing, I bring a multi-disciplinary approach to the design process, and I hope to pioneer ethical design initiatives that will reshape the way people interact with technology.</p>
 							<ul class="actions">
-								<li><a href="https://res.cloudinary.com/noah-s-kang/image/upload/v1536588207/NOAH_KANG_2_p2zweg.pdf" class="button special big">View Resume</a></li>
+								<li><a href="https://res.cloudinary.com/noah-s-kang/image/upload/v1536588207/NOAH_KANG_2_p2zweg.pdf" class="button special big">About me</a></li>
 							</ul>
 						</div>
+
 						<a href="#one" class="more">Learn More</a>
 					</section>
-
 				<!-- Wrapper -->
 					<div id="wrapper">
 
@@ -72,16 +73,25 @@
 										<header>
 											<h2>NestEgg maintenance redesign</h2>
 										</header>
-										<p>Impetus is a crowdfunding application inspired by Kickstarter.com. Users can create campaigns for projects they are passionate about, raise funds, and financially back other users' projects.<br/><br/>
-										Created with Ruby on Rails and React/Redux.
-									</p>
-									<a href="project1maintenance.html">View roject</a>
+										<p>Post Series-A, our design team at NestEgg revamped our maintenance feature to increase adoption among our user-base.
+										</p>
+										<div class="roles">
+											<span class="roles-chip">
+												UX Design
+											</span>
+											<span class="roles-chip">
+												User research
+											</span>
+										</div>
+									<a href="project1maintenance.html">View project</a>
 									</div>
 									<!--
 										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 										320x340 or at least the same aspect ratio (16:17).
 									-->
-									<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
+									<a href="project1maintenance.html" class="img-link">
+										<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
+									</a>
 									<!-- <span class="image"></span> -->
 								</div>
 							</section>
@@ -91,7 +101,7 @@
 								<div class="inner spotlight alt style2">
 									<div class="content">
 										<header>
-											<h2>Supernacho</h2>
+											<h2>NestEgg Dashboard Redesign</h2>
 										</header>
 										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
 										Created with HTML5 and vanilla JavaScript (ES6).</p>
@@ -106,7 +116,7 @@
 								</div>
 							</section>
 
-						<!-- One -->
+						<!-- Three -->
 							<section id="one" class="main">
 								<div class="inner spotlight style1">
 									<div class="content">
@@ -128,7 +138,7 @@
 								</div>
 							</section>
 
-						<!-- Two -->
+						<!-- Four -->
 							<section id="two" class="main">
 								<div class="inner spotlight alt style2">
 									<div class="content">
@@ -148,7 +158,7 @@
 								</div>
 							</section>
 
-						<!-- Three -->
+						<!-- Five -->
 							<section id="three" class="main">
 								<div class="inner spotlight style3">
 									<div class="content">
