--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">I'm passionate about building experiences that connect people. With a background in computer science, graphic design, and content-writing, I bring a multi-disciplinary approach to the design process, and I hope to pioneer ethical design initiatives that will reshape the way people interact with technology.</p>
+							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">With a background in CS, graphic design, and content-writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will reshape the way people interact with technology.</p>
 							<ul class="actions">
 								<li><a href="https://res.cloudinary.com/noah-s-kang/image/upload/v1536588207/NOAH_KANG_2_p2zweg.pdf" class="button special big">About me</a></li>
 							</ul>
@@ -69,9 +69,9 @@
 						<!-- One -->
 							<section id="one" class="main">
 								<div class="inner spotlight style1">
-									<div class="content">
+									<div class="content 6u 12u$(small)">
 										<header>
-											<h2>NestEgg maintenance redesign</h2>
+											<h2>maintenance redesign deep-dive</h2>
 										</header>
 										<p>Post Series-A, our design team at NestEgg revamped our maintenance feature to increase adoption among our user-base.
 										</p>
@@ -89,10 +89,11 @@
 										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
 										320x340 or at least the same aspect ratio (16:17).
 									-->
-									<a href="project1maintenance.html" class="img-link">
-										<img style="padding: 0 0 0 50px;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795281/macbook-pro-black-screen_copy_phksmw.jpg" alt="" />
-									</a>
-									<!-- <span class="image"></span> -->
+									<div class="6u 12u$(small) center-contents">
+										<a href="project1maintenance.html" class="img-link">
+											<img src="images/deepdive-hero-img.jpg" alt="" />
+										</a>
+									</div>
 								</div>
 							</section>
 
@@ -196,7 +197,6 @@
 											<span class="icon major fa-database style2"></span>
 											<h3>Backend: </br/></br/>
 											Python, Java, Ruby on Rails, Node, Express, MongoDB</h3>
-											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
 										</section>
 										<section>
 											<span class="icon major fa-mobile style3"></span>
@@ -205,9 +205,8 @@
 										</section>
 										<section>
 											<span class="icon major fa-pencil style4"></span>
-											<h3>DESIGN: <br /><br/>
-											ADOBE CREATIVE SUITE<br />Balsamiq Mockups</h3>
-											<!-- <p>Consequat turpis venenatis varius lorem sed dictum ipsum amet pellentesque fusce hendrerit consectetur risus, sed eget semper nunc.</p> -->
+											<h3>DESIGN: <br /><br/>Figma<br />
+											ADOBE CREATIVE SUITE<br /></h3>
 										</section>
 									</div>
 								</div>
