--- a/project1maintenance.html
+++ b/project1maintenance.html
@@ -50,64 +50,155 @@
 								<div class="inner project-inner">
 									<header class="major">
 										<h1>Maintenance Flow Redesign</h1>
-										<p class="subtitle">The Problem: Users are not adopting our maintenance feature</h2>
+										<p class="subtitle">Problem statement: Users are not adopting our maintenance feature</h2>
 									</header>
-									<span class="image main"><img src="images/pic04.jpg" alt="" /></span>
+									<span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span>
 									<div class="">
 
 									</div>
-									<h2>
-										Context
-									</h2>
-									<p>
-										NestEgg is a property management app. One key feature is on-demand maintenance. Residents can report maintenance issues, and NestEgg connects landlords with Pros, handles scheduling, and provides live updates to the landlord.
-										<br/><br/>
-										A significant percentage of our users were not using our on-demand maintenance feature, and we wanted to figure out why.
-									</p>
-									<h2>
-										My Role
-									</h2>
-									<p class="_1em-bottom">
-										I worked as the principle UX Researcher and Designer, collaborating with our Product Manager, Chris Le, and the rest of our design team.
-									</p>
-										<div class="roles">
-											<span class="roles-chip">
-												UX Design
-											</span>
-											<span class="roles-chip">
-												User research
-											</span>
-										</div>
-									<h2>
-										Step 1: Investigation
-									</h2>
-									<p class="_1em-bottom">
-										We started with some <strong>initial hypotheses</strong> about why users might not be using our maintenance feature:
-									</p>
-										<ul>
-											<li>
-												<strong>Visibility</strong> - Users may not know that the maintenance feature exists
-											</li>
-											<li>
-												<strong>Education</strong> - Users may not understand what our maintenance product can do for them.
-											</li>
-											<li>
-												<strong>Friction</strong> - Users may find our existing maintenance flow too confusing.
-											</li>
-										</ul>
-										<p class="_1em-bottom">
-											Next, we used <strong>Analyzed tracking data</strong> for some high-level verification of our hypotheses. One key finding is that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages. Now, we were ready for hands-on research
+									<div class="content-block">
+										<h2>
+											Context
+										</h2>
+										<p>
+											NestEgg is a property management app. One key feature is on-demand maintenance. Residents can report maintenance issues, and NestEgg connects landlords with Pros, handles scheduling, and provides live updates to the landlord.
+											<br/><br/>
+											A significant percentage of our users were not using our on-demand maintenance feature, and we wanted to figure out why.
 										</p>
-		<h2>
-			Step 2: User research
-		</h2>
+									</div>
+									<div class="content-block">
+										<h2>
+											My Role
+										</h2>
+										<p class="_1em-bottom">
+											I worked as the principle UX Researcher and Designer, collaborating with our Product Manager, Chris Le, and the rest of our design team.
+										</p>
+											<div class="roles">
+												<span class="roles-chip">
+													UX Design
+												</span>
+												<span class="roles-chip">
+													User research
+												</span>
+											</div>
+									</div>
+									<div class="content-block">
+										<div class="row">
+											<div class="6u 12u$(small)">
+											<h2>
+												Step 1: Investigation
+											</h2>
+											<p class="_1em-bottom">
+												I started with some <strong>initial hypotheses</strong>:
+											</p>
+												<ul>
+													<li>
+														<strong>Visibility</strong> - Users may not know that the maintenance feature exists.
+													</li>
+													<br />
+													<li>
+														<strong>Education</strong> - Users may not understand what our maintenance product can do for them.
+													</li>
+													<br />
+													<li>
+														<strong>Friction</strong> - Users may find our existing maintenance flow too confusing.
+													</li>
+												</ul>
+											</div>
+											<div class="6u 12u$(small)">
+												<span class="image main"><img src="images/old-designs.jpg" alt="" /></span>
+											</div>
+										</div>
 
+											<p>
+												Next, we used <strong>Analyzed tracking data</strong> for some high-level verification of our hypotheses. We found that there was indeed <strong>high drop-off</strong> at the start of our maintenance funnel. We were using a 'chat-bot' interaction for landlords to report maintenance issues, and many of our users didn't make it past the first couple of messages.
+											</p>
+									</div>
+									<div class="content-block">
+										<h2>
+											Step 2: User research
+										</h2>
+										<div class="row">
+											<div class="6u 12u$(small)">
+												<h3>Research objectives</h3>
+												<p>
+													Discover how users are interacting with our maintenance product, with particular focus on the areas of our hypotheses related to visibility, friction, and education.
+												</p>
+											</div>
+											<div class="6u 12u$(small)">
+												<h3>User characteristics</h3>
+												<p>
+													Existing landlords using our application, including both landlords who had used our maintenance product and landlords who had not.
+												</p>
+											</div>
+										</div>
+										<h3>
+											User interviews
+										</h3>
+										<p class="">With a focus group assembled from our existing users, we conducted interviews in which we gave the users common tasks (e.g., ‘you have a broken faucet. How would you use NestEgg to get this issue fixed?’) and examined how users interacted with the App.  In addition, we surveyed users about their experience with our site.</p>
+										<p class="">We consolidated and prioritized our findings, based on several criteria: how often the issue was raised, how much impact we estimated the issue was having on the User experience and our revenue, and how easy it would be to tackle each issue (given the limited dev resources at our startup, we had to assessed proposed fixes with a 'bang-for-buck' mindset.)</p>
+										<h3>
+											Top 3 findings
+										</h3>
+										<div class="table-=wrapper">
+											<table class="alt">
+												<thead>
+													<tr>
+														<th>Problem</th>
+														<th>Proposed solution</th>
+													</tr>
+												</thead>
+												<tbody>
+													<tr>
+														<td>Many users were not even aware that we offered a maintenance service</td>
+														<td>Increase visibility of maintenance service by making it more discoverable.</td>
+													</tr>
+													<tr>
+														<td>Users did not understand how maintenance service worked.</td>
+														<td>Increase in-app education around maintenance service and redesign the experience to be more intuitive.</td>
+													</tr>
+													<tr>
+														<td>Maintenance process was too long, with multiple drop-off points</td>
+														<td>
+															<ul>
+																<li>Replace our current '2-part flow' with a single flow</li>
+																<li>A/B test a form-reporting interaction against our current chat-bot interaction.</li>
+															</ul>
+														</td>
+													</tr>
+												</tbody>
+											</table>
+										</div>
+									</div>
 
+									<div class="content-block">
+										<h2>Step 3: Redesign</h2>
+										<p>
+											I designed prototypes tackling the key problem points that we identified, beginning with lo-fi mockups, which I honed with the help of internal testing with our team, as well as third-party testers.
+										</p>
+										<h3>
+											Increasing Visibility
+										</h3>
+										<ul>
+											<li>Added cross-sell elements to other parts of the experience, like the timeline.</li>
+											<li>Worked with our marketing team to roll out an email marketing campaign with a coupon code to drive first-time usage of our maintenance feature (data showed that once a landlord used maintenance once, they were likely to be a repeat customer.)</li>
+											<li><strong>Guest checkout:</strong> Maintenance was previously hidden behind the pay-wall.</li>
+											</ul>
+										<h3>
+											Decreasing friction: Replacing chat-bot with form.
+										</h3>
+										<p>Our hypothesis was also that many users would actually prefer a form to a chat-bot, due to the speed with which a form can be filled out and the discoverability of the process.  We built a fast reporting form, with plans to AB test this against our extant chat reporting method.</p>
+										<h3>
+											Decreasing friction: replacing 2-step with 1-step flow.
+										</h3>
+										<p>After users reported a maintenance issue, they would need to wait for our ops team to generate a price (could take up to 24 hrs). But by that time, many users would already start looking for a different maintenance solution. I realized that if we could automatically show the user a price estimate based on their job type (based on data abt prices of past jobs, categorized by type), we would obviate the need for ops to manually generate a price. We added a field to the form where landlords could select their job type. Based on that selection, we could automatically show a price to the user <strong>cutting 'time-to-price' from 24 hours to minutes.</strong></p>
+									</div>
 
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis.</p>
-								</div>
+									<div class="content-block">
+											<h2>Post-Mortem</h2>
+											<h3>Were we successful?</h3>
+											<p>While we directly addressed some user pain-points, saw increased up-take of our maintenance product, and got positive feedback from our users, we made mistakes in our tracking implementation, which prevented us from obtaining determinative data through AB testing.<br /><br />In the future, I would like to re-do this process incorporating more iterative changes, using AB testing to verify our hypotheses with greater certainty.</p>
+									</div>
 							</section>
 
 					</div>
