--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							    <span class="wrap"></span>
 							</h1>
 							</header>
-							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">With a background in CS, graphic design, and content-writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will reshape the way people interact with technology.</p>
+							<p style="width: 100%; max-width: 500px; margin-left: auto; margin-right: auto">With a background in CS, graphic design, and writing, I bring a multi-disciplinary approach to the design process. It's my hope to pioneer ethical design initiatives that will improve the way people interact with technology.</p>
 							<ul class="actions">
 								<li><a href="https://res.cloudinary.com/noah-s-kang/image/upload/v1536588207/NOAH_KANG_2_p2zweg.pdf" class="button special big">About me</a></li>
 							</ul>
@@ -91,7 +91,7 @@
 									-->
 									<div class="6u 12u$(small) center-contents">
 										<a href="project1maintenance.html" class="img-link">
-											<img src="images/deepdive-hero-img.jpg" alt="" />
+											<img class="homepage-img" src="images/maint1-homepage-shot.jpg" alt="" />
 										</a>
 									</div>
 								</div>
