--- a/project1maintenance.html
+++ b/project1maintenance.html
@@ -104,9 +104,13 @@
 														<strong>Friction</strong> - Users may find our existing maintenance flow too confusing.
 													</li>
 												</ul>
+											<p><strong>Competitor analysis</strong> of companies like Thumbtack, Jiffy, and Angie's list, was also helpful in identifying common patterns.</p>
 											</div>
 											<div class="6u 12u$(small)">
-												<span class="image main"><img src="images/old-designs.jpg" alt="" /></span>
+												<div class="image main grow-img-scale">
+													<img class="grow-img-shadow" src="images/old-designs.jpg" alt="old designs" title="old designs"/>
+													<i class="img-caption">old designs</i>
+												</div>
 											</div>
 										</div>
 
@@ -136,7 +140,16 @@
 											User interviews
 										</h3>
 										<p class="">With a focus group assembled from our existing users, we conducted interviews in which we gave the users common tasks (e.g., ‘you have a broken faucet. How would you use NestEgg to get this issue fixed?’) and examined how users interacted with the App.  In addition, we surveyed users about their experience with our site.</p>
+										<div class="image main">
+											<img src="images/user-interviews.jpg" alt="">
+											<i class="img-caption">User interviews</i>
+										</div>
+
 										<p class="">We consolidated and prioritized our findings, based on several criteria: how often the issue was raised, how much impact we estimated the issue was having on the User experience and our revenue, and how easy it would be to tackle each issue (given the limited dev resources at our startup, we had to assessed proposed fixes with a 'bang-for-buck' mindset.)</p>
+										<div class="image main">
+											<img src="images/notion.jpg" alt="">
+											<i class="img-caption">Notion was the perfect tool for organizing research findings</i>
+										</div>
 										<h3>
 											Top 3 findings
 										</h3>
@@ -179,10 +192,40 @@
 										<h3>
 											Increasing Visibility
 										</h3>
+										<p>here are some of the changes we made to increase visibility of the maintenance feature:</p>
+										<div class="row">
+											<div class="4u 12u$(medium)">
+												<img src="images/xsell.jpg" class="image main grow-img-scale" alt="">
+												<h3>
+													Cross-sell in rent flow
+												</h3>
+												<p>
+													Integrated cross-sell into the rent flow, to build more traction with users who were only using our rent feature.
+												</p>
+											</div>
+											<div class="4u 12u$(medium)">
+												<img src="images/timeline-module.jpg" class="image main grow-img-scale" alt="">
+												<h3>
+													Top of timeline module
+												</h3>
+												<p>
+													Added a module that would be the first thing that users see when they open the App.
+												</p>
+											</div>
+											<div class="4u 12u$(medium)">
+												<img src="images/takeover.jpg" class="image main grow-img-scale" alt="">
+												<h3>
+													<strike>Takeover Modal</strike>
+												</h3>
+												<p>
+													We also explored a takeover ad, but decided against it after negative user feedback.
+												</p>
+											</div>
+										</div>
+										<p><strong>Other changes we made:</strong></p>
 										<ul>
-											<li>Added cross-sell elements to other parts of the experience, like the timeline.</li>
-											<li>Worked with our marketing team to roll out an email marketing campaign with a coupon code to drive first-time usage of our maintenance feature (data showed that once a landlord used maintenance once, they were likely to be a repeat customer.)</li>
-											<li><strong>Guest checkout:</strong> Maintenance was previously hidden behind the pay-wall.</li>
+											<li>We worked with our marketing team to roll out an email marketing campaign with a coupon code to drive first-time usage of our maintenance feature (data showed that once a landlord used maintenance once, they were likely to be a repeat customer.)</li>
+											<li><strong>Guest checkout:</strong> Maintenance was previously hidden behind the pay-wall. To drive first time adoption of maintenance, we made some of our maintenance features available from the logged-out experience.</li>
 											</ul>
 										<h3>
 											Decreasing friction: Replacing chat-bot with form.
