finish out maintenance project 1

--- a/dashboard.html
+++ b/dashboard.html
@@ -49,25 +49,22 @@
 							<section id="main" class="main">
 								<div class="inner project-inner">
 									<header class="major">
-										<h1>Maintenance Flow Redesign</h1>
-										<p class="subtitle">Problem statement: Users are not adopting our maintenance feature</h2>
+										<h1>Timeline Redesign</h1>
+										<p class="subtitle">Problem statement: Our timeline / landing page isn't useful to our users.</h2>
 									</header>
-									<span class="image main"><img src="images/maint1-hero-img.jpg" alt="" /></span>
-									<div class="">
-
-									</div>
-									<div class="content-block">
-										<h2>
-											Context
-										</h2>
-										<p>
-											NestEgg is an app that aims to replace traditional property managers by empowering mom and pop landlords to easily self-manage their own portfolios. Imagine rent-collection, a maintenance app like Angie's list, and a personal automated concierge, all rolled into one.
-											<br/><br/>
-											One of NestEgg's key features is on-demand maintenance coordination. Landlords or residents can report maintenance issues, and NestEgg handles everything else to get it fixed - finding local Pros, handling scheduling, and providing live in-app updates to the landlords.
-											<br/><br/>
-											However, a significant percentage of our users were not using our on-demand maintenance feature. This was severely concerning, since revenue from our maintenance feature was the lynch pin of our business model. Why weren't users taking to this time and cost-saving feature? We ran a research project to figure out how we could improve our User Experience to address their needs.
-										</p>
-									</div>
+									<h2>Old timeline</h2>
+									<span class="image main"><img src="images/old-timeline.jpg" alt="" /></span>
+									<h3>Usability issues:</h3>
+									<p>Initially, the timeline was supposed to be the one-stop shop for users to check the status of their properties: Check rent-collection progress, view maintenance requests, and get notified about any other changes to their portfolio. However, our metrics showed that users were completely ignoring the timeline. Our research uncovered the following problems:</p>
+									<ul>
+										<li>Notifications could quickly pile up, making the timeline overwhelming and unusable</li>
+										<li>Many users wanted a quick, at-a-glance way of viewing their rent status.</li>
+									</ul>
+									<h2>New dashboard</h2>
+									<p>To ameliorate these issues, I created a dashbaord that had fixed-size modules which gave an at-a-glance viwe that would speak to the three main use-cases that users came to NestEgg for: 1) checking the status of their rent collection, 2) dealing with maintenance issues, and 3) viewing new messages from their residents.</p>
+									<span class="image main"><img src="images/dashboard-mockup.jpg" alt="" /></span>
+									<span class="image main"><img class="img-shadow" src="images/dashboard-desktop.jpg" alt="" /></span>
+									<span class="image main"><img class="img-shadow" src="images/hvac-upkeep-desktop.jpg" alt="" /></span>
 							</section>
 
 					</div>
