--- a/project1maintenance.html
+++ b/project1maintenance.html
@@ -241,12 +241,23 @@
 											Decreasing friction: replacing 2-step with 1-step flow.
 										</h3>
 										<p>After users reported a maintenance issue, they would need to wait for our ops team to generate a price (could take up to 24 hrs). But by that time, many users would already start looking for a different maintenance solution. I realized that if we could automatically show the user a price estimate based on their job type (based on data abt prices of past jobs, categorized by type), we would obviate the need for ops to manually generate a price. We added a field to the form where landlords could select their job type. Based on that selection, we could automatically show a price to the user <strong>cutting 'time-to-price' from 24 hours to minutes.</strong></p>
-									</div>
+										<h2>Old flow</h2>
+										<p>After a user reports an issue, they have to wait for up to 24 hours before they can view a price and book a Pro.</p>
+										<div class="image main grow-img-scale">
+											<img class="grow-img-shadow" src="images/chat-flow.jpg" alt="old designs" title="old designs"/>
+											<i class="img-caption">Old flow with chat.</i>
+										</div>
+										<h2>New flow</h2>
+										<p>We can provide the user with the ability to see a price (based on historic averages for each trade) and book a Pro immediately!</p>
+										<div class="image main grow-img-scale">
+											<img class="grow-img-shadow" src="images/trade-flow.jpg" alt="old designs" title="old designs"/>
+											<i class="img-caption">New flow with up front price information.</i>
+										</div>
 
 									<div class="content-block">
 											<h2>Post-Mortem</h2>
 											<h3>Were we successful?</h3>
-											<p>While we directly addressed some user pain-points, saw increased up-take of our maintenance product, and got positive feedback from our users, we made mistakes in our tracking implementation, which prevented us from obtaining determinative data through AB testing.<br /><br />In the future, I would like to re-do this process incorporating more iterative changes, using AB testing to verify our hypotheses with greater certainty.</p>
+											<p>We directly addressed some user pain-points, saw increased up-take of our maintenance product, and got positive feedback from our users. However, due to technical difficulties, we weren't able to use AB testing in the way that we had intended.<br /><br />One takeaway from this project was to improve our AB testing framework so that we could to verify our hypotheses with greater certainty.</p>
 									</div>
 							</section>
 
