--- a/index.html
+++ b/index.html
@@ -100,21 +100,28 @@
 						<!-- Two -->
 							<section id="two" class="main">
 								<div class="inner spotlight alt style2">
-									<div class="content">
+									<div class="content 6u 12u$(small)">
 										<header>
 											<h2>NestEgg Dashboard Redesign</h2>
 										</header>
-										<p>Supernacho is a side-scrolling browser game (in the tradition of Super-Mario) with a lucha-libre twist. Includes custom-built sprite animations.<br/><br/>
+										<p>I redesigned the key landing page in our App to better address user's primary use cases.<br/><br/>
 										Created with HTML5 and vanilla JavaScript (ES6).</p>
-										<a href="https://noahskang.github.io/supernacho-live/">Live Version</a>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp
-										<a href="https://github.com/noahskang/SuperNacho">Github</a>
+										<div class="roles">
+											<span class="roles-chip">
+												UX Design
+											</span>
+											<span class="roles-chip">
+												User research
+											</span>
+										</div>
+										<a href="dashboard.html">View project</a>
 									</div>
-									<!--
-										Note: You can replace the image below with a JPEG or PNG. Just make sure it's exactly
-										320x340 or at least the same aspect ratio (16:17).
-									-->
-									<img style="padding: 0 50px 0 0;" src="http://res.cloudinary.com/noah-s-kang/image/upload/c_scale,w_600/v1503795774/macbook-pro-black-screen_qfi8gj.jpg" alt="">
+								<div class="6u 12u$(small) center-contents">
+									<a href="dashboard.html" class="img-link">
+										<img class="homepage-img" src="images/dashboard-mockup.png" alt="" style="width: 85%;"/>
+									</a>
 								</div>
+							</div>
 							</section>
 
 						<!-- Three -->
